--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,5 +1,5 @@
-<div class="text-center">
-  <h2 class="jumbotron">Contact Register</h2>
+<div class="bg-img" ><div class="text-center">
+  <h2 class="jumbotron" style="font-family: Trebuchet MS" >Contact Register</h2>
 </div>
 <div class="row">
   <div class="col-md-7">
@@ -8,4 +8,5 @@
   <div class="col-md-5">
     <app-contact-list></app-contact-list>
   </div>
+</div>
 </div>
